--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   },
   "dependencies": {
     "babel-runtime": "^6.0.0",
+    "bulma": "0.0.28",
+    "material-design-lite": "^1.1.3",
     "vue": "^1.0.21",
-    "vue-mdl": "^0.8.3"
+    "vue-mdl": "^0.8.3",
+    "vue-resource": "^0.7.2",
+    "vue-router": "^0.7.13"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
